<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.books.bookDetail.BookDetailFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/book_detail_bookimage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_hide_image_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clipToPadding="false"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/book_detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/book_name"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/isbn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/book_detail_name" />

                    <TextView
                        android:id="@+id/book_detail_isbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/isbn_example"
                        app:layout_constraintStart_toEndOf="@+id/textView13"
                        app:layout_constraintTop_toTopOf="@+id/textView13" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Page: "
                        app:layout_constraintStart_toStartOf="@+id/textView13"
                        app:layout_constraintTop_toBottomOf="@+id/textView13" />

                    <TextView
                        android:id="@+id/book_detail_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="324"
                        app:layout_constraintStart_toEndOf="@+id/textView14"
                        app:layout_constraintTop_toTopOf="@+id/textView14" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Rate: "
                        app:layout_constraintStart_toStartOf="@+id/textView14"
                        app:layout_constraintTop_toBottomOf="@+id/textView14" />

                    <TextView
                        android:id="@+id/book_detail_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="4.2"
                        app:layout_constraintStart_toEndOf="@+id/textView16"
                        app:layout_constraintTop_toTopOf="@+id/textView16" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Category: "
                        app:layout_constraintStart_toStartOf="@+id/textView16"
                        app:layout_constraintTop_toBottomOf="@+id/textView16" />

                    <TextView
                        android:id="@+id/book_detail_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/category"
                        app:layout_constraintStart_toEndOf="@+id/textView18"
                        app:layout_constraintTop_toTopOf="@+id/textView18" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Publisher: "
                        app:layout_constraintStart_toStartOf="@+id/textView18"
                        app:layout_constraintTop_toBottomOf="@+id/textView18" />

                    <TextView
                        android:id="@+id/book_detail_publisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/pottermore_publishing"
                        app:layout_constraintStart_toEndOf="@+id/textView20"
                        app:layout_constraintTop_toTopOf="@+id/textView20" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/book_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lorem_ipsum" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp">

                    <ImageView
                        android:id="@+id/book_detail_author_image"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/user_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/book_detail_author_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/username"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/book_detail_author_image" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/book_detail_add_read_collaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:src="@drawable/baseline_access_time_24"
        app:backgroundTint="@color/purple_500"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/book_detail_add_collection"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/book_detail_add_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:src="@drawable/baseline_bookmark_add_24"
        app:backgroundTint="@color/purple_500"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>